# joyosc

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.markdown  README.md  aclocal.m4  autoclean.sh  autogen.sh  configure  configure.ac  description-pak  make_deb.sh  startstop_script_example.sh  unit-announce required libs.txt  unit_stop.sh  unitd-mask.pd
.github/workflows/: joyosc.yml
autom4te.cache/: requests
classes/: Application.cpp  Config.cpp  Config.h  DBus.h  Devices.h  Joystick_Device.cpp  Led_Mask.cpp  Serial_Device.cpp
classes/tests/class_tests/: class_tests.depend
classes/tests/dbus_class/: dbus_class.depend
classes/tests/joystick_class/: joystick_class.depend
classes/tests/led_mask/: led_mask.depend
classes/tests/osc_class/: osc_class.depend
config/: ar-lib
data/: 85-rc-unitd.rules  85-rc-unitd.rules.source  Makefile.am  Makefile.in  example_config.xml  joyosc.icns
data/icon/: README.txt  joyosc_icon.afdesign  notes.txt
data/pd/: README  README.md  joyosc-example.pd
data/pd/joyosc/: g_controller-help.pd  g_controller.pd  g_joystick-help.pd  g_joystick.pd  j_atom-help.pd  j_atom.pd  j_aton-help.pd  j_aton.pd  j_atosn-help.pd  j_atosn.pd  j_controller-help.pd  j_controller.pd  j_hatdir-help.pd  j_hatdir.pd  j_htom-help.pd  j_htom.pd  j_hton-help.pd  j_hton.pd  j_htosn-help.pd  j_htosn.pd  j_joystick-help.pd  j_joystick.pd
data/pd/unit-patches/: Example-rc-unitd.pd  unit-classic-gui.pd  unit-classic.pd  unit-joystick-help.pd  unit-joystick.pd  unit-joystick_-help.pd  unit-wiimote-help.pd  unit-wiimote.pd
data/udev/: .gitignore  85-joyosc.rules.source  Makefile.am  README.md
data/udev/joyosc-notifier/: Makefile.am  main.cpp
lib/: Makefile.am  Makefile.in  libs.mk
lsjs/: lsjs.depend  lsjs.layout
m4/: ax_cxx_compile_stdcxx.m4  ax_cxx_compile_stdcxx_11.m4
package/: README.md  make-package.sh
package/app/: README.md  joyosc.desktop  joyosc.lnk
package/app/mac/: Joyosc  (+1 more)
pd/: README
pd/unit-patches/: install  install_for_deb.sh  make_deb.sh  unit-joystick-gui.pd  unit-joystick-help.pd  unit-joystick.pd  unit-wiimote-help.pd  unit-wiimote.pd
prj/: premake4.lua  rc-unitd.workspace  runpremake  setupbuild
prj/joyosc.xcodeproj/: project.pbxproj
prj/lsjs.xcodeproj/: project.pbxproj
prj/rc-unit-notifier.xcodeproj/: project.pbxproj
prj/rc-unitd.xcodeproj/: project.pbxproj
prj/unit.xcodeproj/: project.pbxproj
src/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  shared.h
src/joyosc/: App.cpp  App.h  Common.cpp  Common.h  Config.cpp  Config.h  Device.cpp  Device.h  DeviceExclusion.cpp  DeviceExclusion.h  DeviceManager.cpp  DeviceManager.h  DeviceSettingsMap.cpp  DeviceSettingsMap.h  Event.h  GameController.cpp  GameController.h  GameControllerIgnore.cpp  GameControllerIgnore.h  GameControllerRemapping.cpp  GameControllerRemapping.h  Joystick.cpp  Joystick.h  JoystickIgnore.cpp  JoystickIgnore.h  JoystickRemapping.cpp  JoystickRemapping.h  Makefile.am  Makefile.in  ValueScale.h  main.cpp
src/lib/: Button_Box.cpp  Common.h  Config.cpp  Config.h  Device.h  DeviceManager.cpp  Devices.h  GameController.cpp  Joystick.cpp  Joystick.h  JoystickDevice.cpp  JoystickDevice.h  JoystickIgnore.cpp  JoystickManager.cpp  JoystickManager.h  JoystickRemapping.cpp  JoystickRemapping.h  Joystick_Device.h  Log.h  Makefile.am  Makefile.in  Playlist.h  Serial_Device.cpp
src/lib/.deps/: Devices.Po  Serial_Device.Po
src/lib/tests/class_tests/: Test_Sound_Feedback.h
src/lib/tests/dbus_class/: dbus_class.depend
src/lib/tests/joystick_class/: joystick_class.layout
src/lib/tests/led_mask/: led_mask.layout
src/lib/tests/wiimote_class/: wiimote_class.cbp  wiimote_class.layout
src/lsjs/: Makefile.am  Makefile.in  main.cpp
src/rc-unit-notifier/: Makefile.am  Makefile.in  main.cpp
src/rc-unitd/: App.cpp  App.h  Common.h  Config.cpp  Config.h  Device.h  DeviceManager.h  GameController.h  Joystick.h  JoystickIgnore.cpp  JoystickIgnore.h  JoystickRemapping.cpp  JoystickRemapping.h  Log.h  Makefile  Makefile.am  Makefile.in  main.cpp
src/rc-unitd/.deps/: main.Po
tags/rc-unitd-0.1.0-orig/: 85-unitd.rules  ChangeLog  unit_workspace.workspace  unitd-pdrecv.pd
tags/rc-unitd-0.2.0/: AUTHORS  Makefile.in  NEWS  configure  configure.ac  make_deb.sh
tags/rc-unitd-0.2.1/: configure  make_deb.sh
tags/rc-unitd-0.3.0/: make_deb.sh
tags/rc-unitd-0.3.0/src/rc-unit-notifier/: Makefile.am
trunk/: ChangeLog  Makefile  Makefile.am  NEWS  README  config.status  configure  configure.ac  make_deb.sh
trunk/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
trunk/data/: Makefile.am  Makefile.in  example_config.xml
trunk/data/pd/unit-patches/: Example-pdrecv.pd  joystick-example.pd  unit-joystick.pd
trunk/doc-pak/: NEWS
trunk/pd/unit-patches/: unit-wiimote-gui.pd
trunk/prj/: premake4.lua  rc-unit-notifier.depend  rc-unitd.cbp  rc-unitd.layout
trunk/prj/lsjs.xcodeproj/: dano.pbxuser  project.pbxproj
trunk/prj/rc-unit-notifier.xcodeproj/: project.pbxproj
trunk/prj/rc-unitd.xcodeproj/: project.pbxproj
trunk/prj/unit.xcodeproj/: project.pbxproj
trunk/src/: Makefile.am  Makefile.in  config.h.in  unitd.conf
trunk/src/lib/: Common.h  Config.cpp  Config.h  Devices.cpp  JoystickDevice.cpp  JoystickDevice.h  Log.h  Makefile.am  Makefile.in  Osc_Server.cpp  Serial_Device.h  Sound_Feedback.cpp  Unit.h
trunk/src/lib/.deps/: Config.Po  Joystick_Device.Po  Osc_Server.Po  Wiimote.Po
trunk/src/lib/tests/class_tests/: Test_Config.h  Test_Playlist.cpp  Test_Playlist.h  Tests.h  main.cpp
trunk/src/lib/tests/joystick_class/: joystick_class.cbp  joystick_class.depend
trunk/src/lib/tests/led_mask/: main.cpp
trunk/src/lib/tests/serial_device_class/: serial_device_class.cbp
trunk/src/lsjs/: main.cpp
trunk/src/lsjs/.deps/: main.Po
trunk/src/rc-unit-notifier/: Makefile  Makefile.am  Makefile.in  main.cpp
trunk/src/rc-unit-notifier/.deps/: main.Po
trunk/src/rc-unitd/: App.cpp  Makefile.am  Makefile.in  main.cpp
unit-notifier/: main.cpp
unitd/: main.cpp  unitd.cbp  unitd.depend
(+97 files in other folders)
