
# this directory
thisdir = $(srcdir)

# include files
dist_configfiles_DATA = example_config.xml
configfilesdir = $(docdir)

# include pd files
dist_pd_readme_DATA = $(thisdir)/pd/README
pd_readmedir = $(docdir)/pd
dist_unit_patches_DATA = $(thisdir)/pd/unit-patches/Example-rc-unitd.pd \
                         $(thisdir)/pd/unit-patches/unit-joystick.pd \
                         $(thisdir)/pd/unit-patches/unit-joystick-help.pd
unit_patchesdir = $(docdir)/pd/unit-patches
