
# this directory
thisdir = $(srcdir)

# include files
dist_configfiles_DATA = example_config.xml
configfilesdir = $(docdir)

# include pd files
dist_pd_readme_DATA = $(thisdir)/pd/README $(thisdir)/pd/joyosc-example.pd
pd_readmedir = $(docdir)/pd
dist_joyosc_DATA = $(thisdir)/pd/joyosc/g_controller.pd \
                   $(thisdir)/pd/joyosc/g_controller-help.pd \
                   $(thisdir)/pd/joyosc/g_joystick.pd \
                   $(thisdir)/pd/joyosc/g_joystick-help.pd \
                   $(thisdir)/pd/joyosc/j_controller.pd \
                   $(thisdir)/pd/joyosc/j_controller-help.pd \
                   $(thisdir)/pd/joyosc/j_joystick.pd \
                   $(thisdir)/pd/joyosc/j_joystick-help.pd
joyoscdir = $(docdir)/pd/joyosc
