
# this directory
thisdir = $(srcdir)

# include files
dist_datafiles_DATA = example_config.xml icon.bmp
datafilesdir = $(docdir)

# include pd files
dist_pd_readme_DATA = $(thisdir)/pd/README.md $(thisdir)/pd/joyosc-example.pd
pd_readmedir = $(docdir)/pd
dist_joyosc_DATA = $(thisdir)/pd/joyosc/g_controller.pd \
                   $(thisdir)/pd/joyosc/g_controller-help.pd \
                   $(thisdir)/pd/joyosc/g_joystick.pd \
                   $(thisdir)/pd/joyosc/g_joystick-help.pd \
                   $(thisdir)/pd/joyosc/j_controller.pd \
                   $(thisdir)/pd/joyosc/j_controller-help.pd \
                   $(thisdir)/pd/joyosc/j_joystick.pd \
                   $(thisdir)/pd/joyosc/j_joystick-help.pd \
                   $(thisdir)/pd/joyosc/j_hatdir-help.pd \
                   $(thisdir)/pd/joyosc/j_hatdir.pd \
                   $(thisdir)/pd/joyosc/j_atom-help.pd \
                   $(thisdir)/pd/joyosc/j_atom.pd \
                   $(thisdir)/pd/joyosc/j_aton-help.pd \
                   $(thisdir)/pd/joyosc/j_aton.pd \
                   $(thisdir)/pd/joyosc/j_atosn-help.pd \
                   $(thisdir)/pd/joyosc/j_atosn.pd
joyoscdir = $(docdir)/pd/joyosc
