
# load externals variables
include libs.mk

# dirs to delve into
SUBDIRS = $(LIB_SUBDIRS)

# make sure libs are included in the dist tarball
DIST_SUBDIRS = lopack tinyobject

# libs sources, headers here because we dont want to install them
noinst_HEADERS = cpphelpers/Log.h \
				 cpphelpers/Path.h \
				 cpphelpers/optionparser.h cpphelpers/Options.h \
				 cpphelpers/tclap/tclap.h \
				 cpphelpers/tclap/CommandLine.h \
				 cpphelpers/tclap/tclap/Arg.h \
				 cpphelpers/tclap/tclap/ArgException.h \
				 cpphelpers/tclap/tclap/CmdLine.h \
				 cpphelpers/tclap/tclap/CmdLineInterface.h \
				 cpphelpers/tclap/tclap/CmdLineOutput.h \
				 cpphelpers/tclap/tclap/Constraint.h \
				 cpphelpers/tclap/tclap/DocBookOutput.h \
				 cpphelpers/tclap/tclap/HelpVisitor.h \
				 cpphelpers/tclap/tclap/IgnoreRestVisitor.h \
				 cpphelpers/tclap/tclap/MultiArg.h \
				 cpphelpers/tclap/tclap/MultiSwitchArg.h \
				 cpphelpers/tclap/tclap/OptionalUnlabeledTracker.h \
				 cpphelpers/tclap/tclap/StdOutput.h \
				 cpphelpers/tclap/tclap/SwitchArg.h \
				 cpphelpers/tclap/tclap/UnlabeledMultiArg.h \
				 cpphelpers/tclap/tclap/UnlabeledValueArg.h \
				 cpphelpers/tclap/tclap/ValueArg.h \
				 cpphelpers/tclap/tclap/ValuesConstraint.h \
				 cpphelpers/tclap/tclap/VersionVisitor.h \
				 cpphelpers/tclap/tclap/Visitor.h \
				 cpphelpers/tclap/tclap/XorHandler.h 
