
# load externals variables
include libs.mk

# dirs to delve into
SUBDIRS = $(LIB_SUBDIRS)

# make sure libs are included in the dist tarball
DIST_SUBDIRS = lopack tinyobject

# libs sources, headers here because we dont want to install them
noinst_HEADERS = cpphelpers/Log.h \
				 cpphelpers/Path.h \
				 cpphelpers/optionparser.h cpphelpers/Options.h
